--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -2,7 +2,7 @@ div.titlebox span.word {display:none}
 
 div.titlebox .subscribers span.number:after {content:" Sillies and Ponies "}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " in a post-season premiere coma" }
+div.titlebox p.users-online span.number:after { content: " reading to Tank" }
 div.titlebox p.users-online span.word { display: none }
 
 
