--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,70 +1,74 @@
 /* 
-            @
-            @@uF
-          J@. @
-         @@   @u           i21PMMOG8ui
-        @S    YM      r0GZ2vi.      .:7JSN:
-      :@:   P,:@   YNGY.             .:2S@@7
-     7@     @:.@ F@J             1@@S: @ 
-    v@     r@ :@@i               LkXP2i@
-   v@      @: S@                      r@E
-   @      @: i@7            ;v.         .M@.
-  @      @: FU@               U            @B
- 1q     @r ..B@                             U@ 
- @     v@ : G@:@      @M           7         1@
-@U     YM rMF  j@@:    @@jvqXuUj5U@X:2        @i
-@r      S: .qJMB. v8U   .5j@@   ,@@@@UXOq.    7@
-@S       SPu;@L      P@1 ,@@      2@,   :M@   :@
- @         ,@M         @@,O@       @v     ,@. r@
- @7       . @           @  @@@@.    @       @ @.
-  @.      .:@            @ B@@@     5@      @@L
-  .@;      .@L            Z @u       @      O
-    @@      M@    .i      @ :k      .@@:
-    @.       @@2ik@@      M7 :@u    @  Y@
-    @7       .@@@@@@Y     @:   72PEG@u  Z2
-    Ekv        8@@@@  :jPSBNr        @  @             LBBBMGu
-    @ @k         7@@jSv:            @r Bq            G@.  .;N@@
-    Ji q@v        1,      YNu     .MS @N             @8i      M@
-     @  .B@Y.             :@2i:;U8u.;@              Lq@v       0@    Y.:,
-      @   ,Z@07.            ,7Li,.L@j               FvkO        @BSB@@@@@@
-       B.    7OBB87.         .r1PFqUiJ1JLr:         @L@@        @S  ,P@@G@0SFYJv:
-        2G      .LE@@k:    iEP7.        .:;75XFkuS@@j@ :@.      @7     OO    .E8uq0uSO8.
-          @:        :P@@Zv                     ,:irL@i  r@8: .v@1       Z@  :@@8@@@.M@@@@
-           XJ     uF    iE@Mv                L@@M@LZ@     JGqG1          .  @@@B@@@J .@@@
-            L0    @NjJv:   .SBOr  uOBMEr    k@@@@@810  .                     @@@@@J    @@ir:
-             Mi   @    :75L   E@7@B::i2@@0  @@@@@@ v@               1u,       5E@:     j@.;YqO0.
-              @  @        N2  M7 @:      @@@7 i .   @             :@@@@@                @     :@B:
-              B @.        :M.@Z  SU       :@           U7         @@@@@@,               @.   .  M@@
-             @@r        :B@Lr    @@ ..     7@      SMB@@         u@@@@@@                r        @@@
-             i                  @@@J ,.     @.    E@0PG@          v@@vv                          @@@
-                               v@@@@k.      @    u@8XM@@@u                     rO@BOJ            @@u
-                               U@@  @@M5rru@k    q@@@@@@8 r                   @@@BMM@:          :@  
-                                SO   .vFZXv        ,0@M@                     :@@@@@@@r .        @.  
-                                Eu                  X.                       7OO@@@@v.i:G2     @@@  
-                                7@  ..  .@u        @8@       j@@7        kU      :7  X@    @L @@M@X 
-                                 @E     @F@L     j@i @F     @O .@k      O@@@       1@i@J :@k@  @@@i
-                                  @@,  @5 ,@F   @O....@   j@r :,.O@    @B  u@E   r@X. L@;@: q@ MXX
-                                   @@M@B ,..@N:@j :::.v@ 8E.,:::: j@5 @O ,,..B@,k@i :, @@ .. @Mu@,
-                                    BP,8X ,. @@..::::: @@: :::::.. .B@G ::::, i@@ .::: 8F :,.M.i@
-                                     @J BG , i@ ,:::::..@. ,,...     @:.:::::, @,.:::, @:.:.7B @ 
-                                      @r @F , @X .,,,,. MG           @: ::::::,@:.,.   @  . ZO:@
-                                       @. @:..:@        .@           @. .,,:,. @,     :M    @;E:
-                                       :@ U@ , @r        @.          @.        @.     LE    @ @
-                                        @7 @J  u@        @v          @i        @      kF    M @
-                                        7M 7@ ..@        Y@          ML        @      8L   vFLY
-                                         @  @r. @1       .@          N1        @:     Bi   E,@
-                                         @: 0@  k@        @          UE        @r     B:   M,B
-                                         MP :@..r@        @:         :@        G2     @,   O7Y
-                                         v@  @i .@.       @v         .@        UB     @.  .kS,
-                                          @  @u  @:       qE          @        :@     @:  7LO
-                                          @, @X .@:       7@          @:        @     Oi  k1M
-                                          @i BP .@:.      .@          P0        @.    NY  2OF
-                                          @v @k ,@:,:,,,. .@  ....    .@        BU    vO  X@r
-                                          @v @J 7@ ::::::: @;.::::::,. @: ..... UB .,.:@  8@
-                                          @Y.@. NB ::::::: @U.:::::::: 0M :::::.:@.,:, O7i@@
-                                          rS@@v,@u ,:::::: @O ::::::::,,@,,:::,. @7.7UN@@J
-                                              :U@ZSur:,... E8 ....,,... OS ,:rjFF@@q5v: 
-                                                   .rUuLJYiG8i77777r777;PO7u2L,.                      https://derpibooru.org/414830
+                                                         ..,i:
+                                                ,YPMOFL;:.    ,YFX5J7:.
+                                            .JGGU:         .5NY.
+                                         :Z8J.           :EU
+                                      ,XGv             .j:
+                                    YBU               ,. 
+                                  JMi                        ..,::::::,, 
+                                :M:                iYYkE8GZNPkSF155FSXNO8MBBBBBMPU7: 
+                 :BBBBBr       57              iLJYi.                           .iYqBBBB5:
+               .BB:   :BBN   .S                                                         i5BB8v 
+              ZB:        EBv..                                                               YBBO,
+             BB            BBL                                                                  :EB8.
+            B5              .BB                                .,::,..                             .PBU 
+           BL                 MB.                             .i;7Yu5q8BBBBO1;.                       :ZP. 
+          BU       .           LB:                                         .rSBBBBBBPY7UXEqku7:.         Yq:
+         8B       qB            7B.                                               :uN2:       :71XqFv:     i5.
+        .B       UB              NB                                                   7GB5           :7Ujr   .r 
+        B7      .B:               BB                                                     :MBk             :77,.:. 
+       .B       BB                :B                                                        rBB:              ::rL
+       BY      .B:                 BB                                                          BB7                v:
+       B       0B                  UB                                                            BB,
+      BB       BB                  .B                                                              BB 
+      Bv       BB                   B.                                                              iB2 
+      B.       BB                   B.                  .:.                                           BB
+     .B        BB ..                BPk0N5Li              ;U,                                          jB
+     :B        vB..rLLi             v  .:ru0BBOY.           FM                                          ,B:
+     .B         B1   .rv:                    .;kBBN:         ,B5                                          Bi
+      B.        7B      ,,                       .uBBX         BBqvjvi,                                    Bi
+      Bj         BB             ;qBBBB0L,           .qBB:       LB2,uEBBBBB0v:                              Bi
+      8B          Bi          BBBkr:ir1BBBBJ       .   LBB,      :B:     ,:7BBBBBBOJ:                        B.
+       Bi          B.       7BB           iBBB.      ..  vBB      YB   .  :B8BUBi :kBBBBPi                    B
+       LB          .F      vBi               MBB       ..  1Bj     BB    rB   PBB      .YBBBB2:               .B
+       YBB           :     B5                  BBL       ..  BB    iB    B     rB           .jBBBq:            J7
+       B BB               BB                    ,BB       ..  7B,   B,  Bq      MB               LBBBF:         M 
+      BM  BB              BB                      BB.      ... .B;  B:  B        B                   78BZr       U
+      B    UBE            Br                       LB:      ...  2: B: :B        B                       UB8i    , 
+     rB      qB0:        .B,                        7B:      .... i.B  YB71r     B:                         5BS.  .
+     BB        iUBL:,.    Bi                 :::,    iB       .... ,v  YBBBY     B7                           iBM:
+     BB          B: ,.    BM                  ,:iU0GU LB       .,,     LBB.      Br                              1q.
+     BF          B:       BB                    YBBBBBBB7       .,.    iBB       BY 
+     BL          Bk       .B.                      BBBBBB        ,.    .BB       BY 
+     B7          NB        BB                       YBBBB;       ..     BBB. FB  B.
+     Bv          .B        .Bi                       BBBBB              MBBBBBB  B 
+     Bu           BB        BB              r        BBBBB              .BBBBBX  B 
+     BE            Br        BB             BBq     BBBBBB               Bj kB  BB
+     BB            vB:        BB            BBBBBBBBBBBBBB,               ZBB.  B:
+     MB             LBY        Br           FBBBBBBBBBBBBB,                5BBOiB 
+     iB              .BB        :            BBBBBBBBBB  B.                  :5BBMBBU
+      B,               BB7       .           .BBBBBBBB   L    :BB                   Bj
+      BB                .BB:       ..         .BBBBBBBBSB:   uB:B.           ,qkZ:  BB
+      BB          .       :BB:       ...    ,:. rBBBBBBB.   :B  BL             :.   B:
+       B           :7r.     .ZM7         ..                 Bi  FB                 BB
+       BM            :Y1Zr.    iYr.                        ,B    B.               XB
+       GB               rBqUBBO5XBBG.                      :B5BBBBB              BB
+        B,               :B.  ...  :.                      NB2:..iBB.          YBB: 
+BBSi    BB                .B,       7FY,                   B: :i:. EBB      ,GBB.;B 
+..LZBBE YB                 ,B.       .vOBS:                B0,:.,77..8BBZqOBBUi,:MB
+      i0BB7                 LB          ,JBBBNr.           FBN:.,LL.:::7U5j:   :BBN
+         BB                  BB             iPBBBBMUi.,.  ;B::i.....rL:      iL: .B:
+         :B                   B:          ..    .rkMBB2BBOBM :77.      ..:;77L7  .BY
+          BE                  BB            ...      B    GB :;i ,vFOBBBBBBBBBBBBBB
+          BB                  .B.             .....  OM    BG:,YBBBBBEJqLYk;LUNB
+          ;B                   B1              ..... .B     1BBBMUYP5EYNuY87FUB7
+           B7                  BB               ..... B:      B8LE2PqSP2Xv87PuB,
+           BB                  BB                .... 5B      PBLqqUZUE2E7ELUJB
+           BB                  BB                .... :B      .Bq205q5SPFuEZBBB
+           BB                  BB                ....  B       NBBBBBBBBBBBBBr
+. ..       BB          i       BP                .,..  B
+.          BB          Li      B.                      B                                   Source: http://fav.me/d8nzcul
+*/
 
 
 /* Fix new Reddit CSS crashing emotes into the comment buttons */
@@ -151,8 +155,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Sobbing Uncontrollably"}
-div.titlebox .users-online span.number:after {content:" Crying on the Inside"}
+div.titlebox .subscribers span.number:after {content:" Foalsitters"}
+div.titlebox .users-online span.number:after {content:" Asleep on the Job"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -302,11 +306,11 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%kilroywashere%%);
- width:70px;
- height:46px;
- margin-top:-21px;
- margin-left:5px;
+ background:url(%%pinkie-stache-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
+ margin-left:10px;
  margin-bottom:0px;
  margin-right:-40px;
 }
@@ -727,8 +731,16 @@ a[href|="/rajlie"],a[href|="/ra00"],a[href|="/rpriceless"],a[href|="/ra10"],a[hr
     transform: scaleX(-1);
 }
 
-a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]
+a[href|="/swagintosh"],a[href|="/a24"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%swagintosh-sheet%%)!important}
+
+a[href|="/rswagintosh"],a[href|="/ra24"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%swagintosh-sheet%%)!important;
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+}
 
 a[href|="/flutterfear"],a[href|="/b00"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/eeyup"],a[href|="/bigmac"],a[href|="/b21"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/takealetter"],a[href|="/b22"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/noooo"],a[href|="/b23"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/fluttershh"],a[href|="/b04"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/squintyjack"],a[href|="/b24"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/ajugh"],a[href|="/b05"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/dumbfabric"],a[href|="/b25"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/trixiesmug"],a[href|="/b06"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rarityannoyed"],a[href|="/b26"],a[href|="/soawesome"],a[href|="/b36"],a[href|="/ajwut"],a[href|="/b07"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/raritywhine"],a[href|="/b27"],a[href|="/rdcool"],a[href|="/b37"],a[href|="/abwut"],a[href|="/b08"],a[href|="/manspike"],a[href|="/b18"],a[href|="/cockatrice"],a[href|="/b28"],a[href|="/facehoof"],a[href|="/b38"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rarityprimp"],a[href|="/b19"],a[href|="/twirage"],a[href|="/b29"],a[href|="/ppseesyou"],a[href|="/b39"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
@@ -1810,3 +1822,9 @@ div.bottom span.author:after {
 }
 
 .md sup {line-height: inherit}
+
+#header-bottom-left {
+    background-image: url(%%65k-banner%%);
+    background-repeat: no-repeat;
+    background-position: 98% 100%;
+}
