--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -561,6 +561,11 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"], a[href|="/applebat"], a[href|="/fuzzybutts"], a[href|="/socksaydash"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
+/* Misfits m */
+
+a[href|="/jawdrop"]
+{background-image:url(%%misfitsm%%);display:block;float:left;}
+
 /*
   ------
  */
@@ -1259,3 +1264,4 @@ a[href|="/eponawearsitbetter"] {width:165px;height:200px;background-position: -5
 a[href|="/applebat"] {width:150px;height:130px;background-position: 0 -452px;}
 a[href|="/fuzzybutts"] {width:150px;height:97px;background-position: -150px -504px;}
 a[href|="/socksaydash"] {width:200px;height:97px;background-position: -300px -513px;}
+a[href|="/jawdrop"] {width:150px;height:96px;}
